# mark_lang

./: README.md  pyproject.toml
docs/: architecture.md  brand_document_ingestion.md  diagrams.md  operations.md  setup.md  workshop.md
examples/: brief.txt  dnb_brand_guidelines.json  guidelines.json
examples/translated/: 2024 TV-aksjonen Materielloversikt_translated.json  2025 VIPPS DNB Materielloversikt_translated.json  24-01 - Forretningsbrief - huninvesterer - Akademi_translated.json  24-05 - Forretningsbrief - TV-aksjonen_translated.json  25 - Vipps Pay - Dreiebok_translated.json  250404 Mal kreativ brief byrå_translated.json  DNB TV-aksjonen_Hver krone teller_manus 25-09-2024_translated.json  DNB TV-askjonen_Debrief_29.08.24_translated.json  DNB_Tæpp_Debrief_301024_translated.json  Debrief DNB Huninvesterer 8. mars_15.02.24_translated.json  Kreativ Brief Huninvesterer Forbilder wow  mars 2024_translated.json  Kreativ Brief TRY - DNB TV-aksjonen 2024_translated.json
src/mark_lang/: __init__.py  brand_guidelines_extractor.py  brief_ingest.py  creative_brief.py  document_processor.py  ingest_brand_documents.py  translator.py
src/mark_lang/brand_center/: __init__.py  api_client.py
src/mark_lang/ui/: __init__.py  cli.py
src/mark_lang/workflows/: __init__.py  creative_campaign.py
tests/: test_brand_center.py  test_brief_ingest.py  test_creative_brief.py  test_workflow.py
