[tool.poetry]
name = "mark-lang"
version = "0.1.0"
description = "Creative brief processing and campaign planning toolkit"
authors = ["Marketing AI Team <marketing-ai@example.com>"]
readme = "README.md"
packages = [{ include = "mark_lang", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.0.50"
langchain = "^0.1.0"
pydantic = "^2.6.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
